--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ document.getElementById('passwordForm').onsubmit = function(event) {
 
     // Check against the valid hex password
     if (hexPassword === validHexPassword) {
-        window.location.href = '/success'; // Redirect on success
+        window.location.href = 'https://wyattsucks.org/ws-mc.github.com/'; // Redirect on success
     } else {
         alert('Invalid password!');
     }
